--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -7,10 +7,9 @@
   color: white;
 }
 
-.brand-logo {
-  margin-top: auto;
-  margin-left: 9rem;
-}
+/* .brand-logo {
+
+} */
 
 .nav-list-item {
   list-style-type: none;
@@ -77,6 +76,8 @@
 .nav-brand:hover {
   color: white;
   text-decoration: none;
+  margin-top: auto;
+  margin-left: 9rem;
 }
 
 @media (max-width: 720px) {
@@ -110,10 +111,6 @@
     position: absolute;
     top: 1rem;
     right: 5%;
-  }
-
-  .brand-logo {
-    margin: 0.6rem 0;
   }
 
   .nav-list.active {
